@@ -111,6 +111,24 @@
 
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>client</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <main.class>client.ClientApp</main.class>
+            </properties>
+        </profile>
+        <profile>
+            <id>admin</id>
+            <properties>
+                <main.class>admin_ui.AdminApp</main.class>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
@@ -118,7 +136,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>client.ClientApp</mainClass>
+                    <mainClass>${main.class}</mainClass>
                     <options>
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
@@ -132,19 +150,17 @@
                         <option>javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED</option>
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
                     </options>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
                 <configuration>
-                    <options>
-                        <option>--add-opens</option>
-                        <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
-                        <option>--add-exports</option>
-                        <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
-                    </options>
+                    <mainClass>${main.class}</mainClass>
                 </configuration>
             </plugin>
         </plugins>
